@@ -1,5 +1,7 @@
 2007-02-09  Zack Weinberg  <zackw@panix.com>
 
+	* cmd_merging.cc (merge_into_workspace): Use get_content_paths.
+
 	* work.cc (get_revision_id, get_base_revision, get_base_roster)
 	(get_base_and_current_roster_shape): Delete delete delete.
 	* work.hh: Likewise.  Improve comments.
@@ -298,7 +300,7 @@
 
 	* tests/test_a_merge_8/{parent,left,right,correct}: simplified
 	the test case.
-	
+
 2007-02-08  Derek Scherger  <derek@echologic.com>
 
 	* cmd_merging.cc (get_content_paths): new function
@@ -315,7 +317,7 @@
 	(editable_working_tree::create_file_node): write file content here
 	rather than deferring it to attach_node
 	(editable_working_tree::attach_node): remove deferred file content
-	(editable_working_tree::apply_delta): remove path argument from 
+	(editable_working_tree::apply_delta): remove path argument from
 	get_version call
 
 2007-02-08  Zack Weinberg  <zackw@panix.com>
